INTERIM-173 Make sure video doesn't overflow its container

--- a/css/suitcase.css
+++ b/css/suitcase.css
@@ -2836,6 +2836,13 @@ td.views-field-field-resource-screenshot img {
   height: 0;
 }
 
+.player iframe {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /* ---------------------------------------- */
 /* ## CONTENT EDITING
 /* ---------------------------------------- */
